# decentpaste

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  TRADEMARK.md  discord-announcement.txt
.claude/: settings.json
.claude/skills/android-release/: SKILL.md
.claude/skills/appstore-screenshots/: SKILL.md
.claude/skills/appstore-screenshots/scripts/: resize_screenshots.py
.claude/skills/bump-version/: SKILL.md
.claude/skills/github-release/: SKILL.md
.claude/skills/ios-icon-fix/: SKILL.md
.claude/skills/ios-icon-fix/scripts/: remove_alpha.py
.claude/skills/ios-release/: SKILL.md
.github/workflows/: deploy-pages.yml  release.yml
decentpaste-app/: .prettierignore  index.html  package.json  vite.config.ts
decentpaste-app/scripts/: setup-ios-share-extension.sh
decentpaste-app/src/: app.ts  main.ts  styles.css  vite-env.d.ts
decentpaste-app/src-tauri/: .taurignore  Cargo.toml  Info.ios.plist  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.macos.conf.json
decentpaste-app/src-tauri/capabilities/: default.json  desktop.json
decentpaste-app/src-tauri/icons/: icon.icns
decentpaste-app/src-tauri/plugins/tauri-plugin-share-intent/: .gitignore  Cargo.toml  build.rs
decentpaste-app/src-tauri/plugins/tauri-plugin-share-intent/android/: .gitignore  build.gradle.kts  proguard-rules.pro
decentpaste-app/src-tauri/plugins/tauri-plugin-share-intent/android/src/main/: AndroidManifest.xml
decentpaste-app/src-tauri/plugins/tauri-plugin-share-intent/android/src/main/kotlin/com/decentpaste/plugins/shareintent/: ShareIntentPlugin.kt
decentpaste-app/src-tauri/plugins/tauri-plugin-share-intent/ios/: Package.swift
decentpaste-app/src-tauri/plugins/tauri-plugin-share-intent/ios/ShareExtension/: Info.plist  ShareViewController.swift
decentpaste-app/src-tauri/plugins/tauri-plugin-share-intent/ios/Sources/ShareIntentPlugin/: ShareIntentPlugin.swift
decentpaste-app/src-tauri/plugins/tauri-plugin-share-intent/permissions/: default.toml
decentpaste-app/src-tauri/plugins/tauri-plugin-share-intent/permissions/autogenerated/: reference.md
decentpaste-app/src-tauri/plugins/tauri-plugin-share-intent/permissions/autogenerated/commands/: clear_pending_content.toml  get_pending_content.toml  has_pending_content.toml
decentpaste-app/src-tauri/plugins/tauri-plugin-share-intent/permissions/schemas/: schema.json
decentpaste-app/src-tauri/plugins/tauri-plugin-share-intent/src/: commands.rs  error.rs  lib.rs
decentpaste-app/src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs  tray.rs
decentpaste-app/src-tauri/src/clipboard/: mod.rs  monitor.rs  sync.rs
decentpaste-app/src-tauri/src/network/: behaviour.rs  events.rs  mod.rs  pairing_code.rs  protocol.rs  swarm.rs
decentpaste-app/src-tauri/src/security/: crypto.rs  identity.rs  mod.rs  pairing.rs
decentpaste-app/src-tauri/src/storage/: config.rs  mod.rs  peers.rs
decentpaste-app/src-tauri/src/vault/: auth.rs  auth_persistence.rs  error.rs  manager.rs  mod.rs  salt.rs  storage.rs
decentpaste-app/src/api/: autostart.ts  commands.ts  events.ts  types.ts  updater.ts
decentpaste-app/src/components/: icons.ts
decentpaste-app/src/state/: store.ts
decentpaste-app/src/utils/: dom.ts  error.ts  notifications.ts  platform.ts
decentpaste-app/tauri-plugin-decentsecret/: Cargo.toml  README.md  build.rs  package.json  rollup.config.js
decentpaste-app/tauri-plugin-decentsecret/android/: build.gradle.kts
decentpaste-app/tauri-plugin-decentsecret/android/src/androidTest/java/: ExampleInstrumentedTest.kt
decentpaste-app/tauri-plugin-decentsecret/android/src/main/java/: DecentsecretPlugin.kt  Example.kt  ExamplePlugin.kt
decentpaste-app/tauri-plugin-decentsecret/android/src/test/java/: ExampleUnitTest.kt
decentpaste-app/tauri-plugin-decentsecret/guest-js/: index.ts
decentpaste-app/tauri-plugin-decentsecret/ios/: Package.swift  README.md
decentpaste-app/tauri-plugin-decentsecret/ios/Sources/: DecentsecretPlugin.swift  ExamplePlugin.swift
decentpaste-app/tauri-plugin-decentsecret/permissions/: default.toml
decentpaste-app/tauri-plugin-decentsecret/permissions/autogenerated/: reference.md
decentpaste-app/tauri-plugin-decentsecret/permissions/autogenerated/commands/: retrieve_secret.toml
decentpaste-app/tauri-plugin-decentsecret/permissions/schemas/: schema.json
decentpaste-app/tauri-plugin-decentsecret/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
decentpaste-app/tauri-plugin-decentshare/: .gitignore  Cargo.toml  README.md  build.rs  package.json
decentpaste-app/tauri-plugin-decentshare/android/: build.gradle.kts
decentpaste-app/tauri-plugin-decentshare/examples/tauri-app/: package.json  vite.config.js
decentpaste-app/tauri-plugin-decentshare/guest-js/: index.ts
decentpaste-app/tauri-plugin-decentshare/ios/: Package.swift
decentpaste-app/tauri-plugin-decentshare/ios/ShareExtension/: ShareViewController.swift
decentpaste-app/tauri-plugin-decentshare/permissions/: default.toml
decentpaste-app/tauri-plugin-decentshare/scripts/: setup-ios-share-extension.sh
decentpaste-app/tauri-plugin-decentshare/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
decentpaste-relay/: Cargo.toml  Dockerfile  README.md  deploy.sh
decentpaste-relay/src/: main.rs
docs/: SHARE_INTENT_IMPLEMENTATION.md  SHARE_INTENT_SETUP.md  share-ios-plan.md  share-ios-prompt.md
docs/hw-security/: plan.md
docs/prd/: history-sync.md
website/: .prettierignore  CNAME  README.md  downloads.json  feature-graphic-template.html  index.html  og-image-template.html  package.json  privacy.html  robots.txt  script.js  sitemap.xml  styles.css  support.html
website/blog/posts/: 2025-12-15-introducing-decentpaste.md  2026-01-07-ios-share-extension-tauri.md  2026-01-12-cross-platform-biometric-keyring-storage-tauri.md  2026-01-14-offline-clipboard-sync.md
website/scripts/: build.js
website/src/: input.css
website/src/templates/: blog-index.html  blog-post.html
(+18 files in other folders)
