[package]
name = "decentpaste-app"
version = "0.3.2"
description = "Cross-platform clipboard sharing over P2P network"
authors = ["you"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "decentpaste_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-stronghold = "2"
iota_stronghold = "2.1"  # For accessing snapshot encryption work factor

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# libp2p networking
libp2p = { version = "0.56", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "mdns",
    "gossipsub",
    "request-response",
    "identify",
    "macros",
] }

# Clipboard (cross-platform including mobile)
tauri-plugin-clipboard-manager = "2"

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
x25519-dalek = { version = "2", features = ["static_secrets"] }

# Storage & utilities
hostname = "0.4"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
