[package]
name = "tauri-plugin-decentsecret"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-decentsecret"

[dependencies]
tauri = { version = "2.9.5" }
serde = "1.0"
serde_json = "1.0"
thiserror = "2"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }

# Desktop-only: OS keyring integration
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
keyring = "3"
base64 = "0.22"
