[package]
name = "tauri-plugin-share-intent"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin for handling share intents on mobile"
license = "MIT"
authors = ["DecentPaste Team"]
links = "tauri-plugin-share-intent"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
